--- a/index.html
+++ b/index.html
@@ -20,34 +20,42 @@
     <div class="heading rounded display-4 text-wrap col-md-6 ml-auto">
         <h1 class="text-white text-right">Star Wars RPG!</h1>
     </div>
-    <div class="clearfix ml-2 characters">
-        <div class="card float-left border-success character" position="1" health-points="120" current-health-points="120" attack-power="8" counter-attack-power="10">
-            <div class="card-header font-weight-bold text-center" >Princess Leia</div>
-            <img class="card-img-top rounded" src="assets/images/leia.jpg" alt="Princess Leia">
-            <div class="card-footer font-weight-bold text-center">120</div>
-        </div>
-        <div class="card float-left border-success character" position="2" health-points="100" current-health-points="100" attack-power="6" counter-attack-power="5">
-            <div class="card-header font-weight-bold text-center">Yoda</div>
-            <img class="card-img-top rounded" src="assets/images/yoda.jpg" alt="Yoda">
-            <div class="card-footer font-weight-bold text-center">100</div>
-        </div>
-        <div class="card float-left border-success character" position="3" health-points="150" current-health-points="150" attack-power="7" counter-attack-power="20">
-            <div class="card-header font-weight-bold text-center">Storm Trooper</div>
-            <img class="card-img-top rounded" src="assets/images/storm.jpeg" alt="Storm Trooper">
-            <div class="card-footer font-weight-bold text-center">150</div>
-        </div>
-        <div class="card float-left border-success character" position="4" health-points="180" current-health-points="180" attack-power="8" counter-attack-power="25">
-            <div class="card-header font-weight-bold text-center">Darth Vader</div>
-            <img class="card-img-top rounded" src="assets/images/vader.jpg" alt="Darth Vader">
-            <div class="card-footer font-weight-bold text-center">180</div>
+    <div class="spot1">
+        <div class="clearfix ml-2 characters">
+            <div class="card float-left border-success character" position="1" health-points="120" attack-power="8" counter-attack-power="10">
+                <div class="card-header font-weight-bold text-center">Princess Leia</div>
+                <img class="card-img-top rounded" src="assets/images/leia.jpg" alt="Princess Leia">
+                <div class="card-footer font-weight-bold text-center">120</div>
+            </div>
+            <div class="card float-left border-success character" position="2" health-points="100" attack-power="6" counter-attack-power="5">
+                <div class="card-header font-weight-bold text-center">Yoda</div>
+                <img class="card-img-top rounded" src="assets/images/yoda.jpg" alt="Yoda">
+                <div class="card-footer font-weight-bold text-center">100</div>
+            </div>
+            <div class="card float-left border-success character" position="3" health-points="150" attack-power="7" counter-attack-power="20">
+                <div class="card-header font-weight-bold text-center">Storm Trooper</div>
+                <img class="card-img-top rounded" src="assets/images/storm.jpeg" alt="Storm Trooper">
+                <div class="card-footer font-weight-bold text-center">150</div>
+            </div>
+            <div class="card float-left border-success character" position="4" health-points="180" attack-power="8" counter-attack-power="25">
+                <div class="card-header font-weight-bold text-center">Darth Vader</div>
+                <img class="card-img-top rounded" src="assets/images/vader.jpg" alt="Darth Vader">
+                <div class="card-footer font-weight-bold text-center">180</div>
+            </div>
         </div>
     </div>
 
-    <h5 class="text-white ml-2 your-char-text">Your Character</h5>
+    <div class="spot2">
+        <h5 class="text-white ml-2 your-char-text">Your Character</h5>
+    </div>
 
-    <div class="images clearfix ml-2 enemies"></div>
+    <div class="spot3">
+        <div class="images clearfix ml-2 enemies"></div>
+    </div>
 
-    <h5 class="text-white ml-2 enemies-text">Enemies Available To Attack</h5>
+    <div class="spot4">
+        <h5 class="text-white ml-2 enemies-text">Enemies Available To Attack</h5>
+    </div>
 
     <h5 class="text-white ml-2">Fight Section</h5>
 
