--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
     </div>
     <div class="spot1">
         <div class="clearfix ml-2 characters">
-            <div class="card float-left border-success character" position="1" health-points="120" attack-power="8" counter-attack-power="10">
+            <div class="card float-sm-left border-success character" position="1" health-points="130" attack-power="10" counter-attack-power="10">
                 <div class="card-header font-weight-bold text-center">Princess Leia</div>
                 <img class="card-img-top rounded" src="assets/images/leia.jpg" alt="Princess Leia">
-                <div class="card-footer font-weight-bold text-center">120</div>
+                <div class="card-footer font-weight-bold text-center">130</div>
             </div>
-            <div class="card float-left border-success character" position="2" health-points="100" attack-power="6" counter-attack-power="5">
+            <div class="card float-sm-left border-success character" position="2" health-points="100" attack-power="8" counter-attack-power="15">
                 <div class="card-header font-weight-bold text-center">Yoda</div>
                 <img class="card-img-top rounded" src="assets/images/yoda.jpg" alt="Yoda">
                 <div class="card-footer font-weight-bold text-center">100</div>
             </div>
-            <div class="card float-left border-success character" position="3" health-points="150" attack-power="7" counter-attack-power="20">
+            <div class="card float-sm-left border-success character" position="3" health-points="150" attack-power="7" counter-attack-power="20">
                 <div class="card-header font-weight-bold text-center">Storm Trooper</div>
                 <img class="card-img-top rounded" src="assets/images/storm.jpeg" alt="Storm Trooper">
                 <div class="card-footer font-weight-bold text-center">150</div>
             </div>
-            <div class="card float-left border-success character" position="4" health-points="180" attack-power="5" counter-attack-power="25">
+            <div class="card float-sm-left border-success character" position="4" health-points="180" attack-power="6" counter-attack-power="5">
                 <div class="card-header font-weight-bold text-center">Darth Vader</div>
                 <img class="card-img-top rounded" src="assets/images/vader.jpg" alt="Darth Vader">
                 <div class="card-footer font-weight-bold text-center">180</div>
@@ -57,7 +57,7 @@
         <h5 class="text-white ml-2 enemies-text">Enemies Available To Attack</h5>
     </div>
 
-    <h5 class="text-white ml-2">Fight Section</h5>
+    <div><h5 class="text-white ml-2">Fight Section</h5></div>
 
     <button type="button" class="btn btn-light ml-2 attack-button">Attack</button>
 
