adding some styling

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="spot3">
-        <div class="images clearfix ml-2 enemies"></div>
+        <div class="clearfix ml-2 enemies row"></div>
     </div>
 
     <div class="spot4">
@@ -63,7 +63,7 @@
 
     <h5 class="text-white ml-2">Defender</h5>
 
-    <div class="images clearfix ml-2 defender"></div>
+    <div class="images clearfix ml-2 defender row"></div>
 
     <p class="message attack-message1 ml-2 text-white"></p>
     <p class="message attack-message2 ml-2 text-white"></p>
