--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <h5 class="text-white ml-2">Defender</h5>
 
-    <div class="images clearfix ml-2 defender row"></div>
+    <div class="clearfix ml-2 defender row"></div>
 
     <p class="message attack-message1 ml-2 text-white"></p>
     <p class="message attack-message2 ml-2 text-white"></p>
